--- a/samples/2_Cookbook/15_static_library/device_functions/CMakeLists.txt
+++ b/samples/2_Cookbook/15_static_library/device_functions/CMakeLists.txt
@@ -2,13 +2,6 @@ project(static_lib)
 
 cmake_minimum_required(VERSION 3.10)
 
-if (NOT DEFINED ROCM_PATH )
-     set ( ROCM_PATH "/opt/rocm"  CACHE STRING "Default ROCM installation directory." )
-endif ()
-
-# Search for rocm in common locations
-list(APPEND CMAKE_PREFIX_PATH ${ROCM_PATH}/hip ${ROCM_PATH})
-
 # Find hip
 find_package(hip REQUIRED)
 
@@ -38,7 +31,7 @@ add_library(HipDevice STATIC ${CPP_SOURCES})
 
 target_compile_options(HipDevice PRIVATE -fgpu-rdc)
 target_link_libraries(HipDevice PRIVATE -fgpu-rdc)
-target_include_directories(HipDevice PRIVATE ${ROCM_PATH}/hsa/include)
+target_include_directories(HipDevice PRIVATE ${CMAKE_PREFIX_PATH}/hsa/include)
 
 # Create test executable that uses libHipDevice.a
 set(TEST_SOURCES ${CMAKE_SOURCE_DIR}/hipMain2.cpp)
